--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
+        <form id="productForm">
+            <input type="button" value="Submit" id="submitButton">
+        </form>
         <div id="answerField">
             answer
         </div>
-        <form id="productForm">
-            <div>
-                <input type="checkbox" id="tomato" name="products" value="tomato" checked>
-                <label for="tomato">tomato</label>
-            </div>
-            <div>
-                <input type="checkbox" id="cucumber" name="products" value="cucumber" checked>
-                <label for="cucumber">cucumber</label>
-            </div>
-            <input type="button" value="Submit" id="submitButton">
-        </form>
         <script src="index.js"></script>
+        <script src="productsBuild.js"></script>
     </body>
 </html>
